chore: update translation docs
